fix search bar on tablet or higher sizes

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -137,16 +137,21 @@ footer{
   justify-content: center;
   padding: 0;
 }
+form#search{
+  padding: 1rem
+}
 
+@media only screen and (min-width: 768px) {
+  form#search{
+    padding: 3rem
+  }
+}
 @media only screen and (max-width: 769px) {
   /* .column{
     padding: 3rem !important
   } */
   form{
     padding: 3rem
-  }
-  form#search{
-    padding: 1rem
   }
 }
 @media only screen and (max-width: 770px) {
